<resources>
    <string name="app_name">Mod2Class3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marca">Marca</string>
    <string name="agregar">Agregar</string>
    <string name="modelo">Modelo</string>
    <string name="placa">Placa</string>
    <string name="anio">Año</string>
    <string name="propietario">Propietario</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrar">Registrarse Ahora</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="rep_contrasenia">Repetir Contraseña</string>
    <string name="guardar">Guardar</string>
</resources>
