<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jcodee.mod2class3.EditarActivity">

    <Spinner
        android:id="@+id/spMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPlaca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placa"
        android:inputType="text" />

    <EditText
        android:id="@+id/etAnio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/anio"
        android:inputType="number" />

    <EditText
        android:id="@+id/etPropietario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/propietario"
        android:inputType="text" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/agregar" />

</LinearLayout>
